# ursly

./: .eslintignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TEST_COVERAGE.md  agents.md  docker-compose.prebuilt.yml  docker-compose.prod.yml  docker-compose.yml  env.example  github-profile-README.md  nx.json  package-lock.json  package.json  quick-start.sh  tailwind.config.js  tsconfig.base.json
.github/: AWS_SETUP.md  DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  desktop-build.yml  devsecops.yml  release.yml
apps/agent-desktop/: .eslintrc.json  index.html  package-lock.json  project.json  vite.config.ts
apps/agent-desktop/src/: App.tsx  main.tsx
apps/agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-desktop/src-tauri/src/: commands.rs  main.rs
apps/agent-desktop/src/pages/: index.ts
apps/api/: .eslintrc.json  Dockerfile.prebuilt
apps/api-e2e/: jest.config.ts  project.json  tsconfig.json
apps/api-e2e/src/: agents.e2e-spec.ts  entitlements.e2e-spec.ts  health.e2e-spec.ts  models.e2e-spec.ts  openapi.e2e-spec.ts  setup.ts  tasks.e2e-spec.ts  teardown.ts  test-utils.ts
apps/api/src/: app.module.ts
apps/api/src/auth/: jwt-auth.guard.ts  keycloak.service.ts
apps/api/src/config/: env.validation.ts
apps/api/src/file-metadata/: file-metadata.controller.ts  file-metadata.module.ts  file-metadata.service.ts  index.ts
apps/api/src/health/: health.controller.ts
apps/desktop/: .eslintrc.json  index.html  package-lock.json  package.json  project.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/vfs/: commands.rs  filesystem.rs  hydration.rs  local.rs  mod.rs  mount.rs  types.rs
apps/desktop/src-tauri/src/vfs/adapters/: clipboard.rs  ffmpeg_media.rs  fsxn_storage.rs  gcs_storage.rs  local_storage.rs  metadata_store.rs  mod.rs  nas_storage.rs  nvme_cache.rs  s3_storage.rs  tauri_event_bus.rs
apps/desktop/src-tauri/src/vfs/application/: mod.rs  use_cases.rs  vfs_service.rs
apps/desktop/src-tauri/src/vfs/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
apps/desktop/src-tauri/src/vfs/infrastructure/: hls_server.rs  mod.rs  state.rs
apps/desktop/src-tauri/src/vfs/platform/: disk.rs  mod.rs  network.rs  paths.rs  permissions.rs
apps/desktop/src-tauri/src/vfs/ports/: cache.rs  clipboard.rs  cross_storage.rs  event_bus.rs  file_operations.rs  media.rs  metadata.rs  mod.rs  storage.rs  sync.rs
apps/desktop/src-tauri/src/vfs/tests/: mod.rs
apps/desktop/src/components/: Header.tsx
apps/desktop/src/contexts/: ThemeContext.tsx
apps/desktop/src/hooks/: index.ts  useDeploymentMode.spec.ts  useDeploymentMode.ts  useKeyboardShortcuts.spec.ts  useKeyboardShortcuts.ts
apps/desktop/src/pages/: BrowserFinderPage.tsx  FinderPage.contextmenu.spec.js  FinderPage.contextmenu.spec.ts  FinderPage.dnd.spec.ts  FinderPage.tsx  GpuMetricsPage.tsx  StorageBrowserPage.tsx  SystemResourcesPage.tsx  UnifiedFinderPage.tsx  index.ts
apps/desktop/src/services/: browser-api.service.spec.ts  browser-api.service.ts  dialog.service.ts  storage.service.ts
apps/desktop/src/styles/: finder.css  index.css  storage-browser.css  theme-variables.css
apps/desktop/src/types/: storage.ts
apps/desktop/src/utils/: pathUtils.ts
apps/grpc/: .eslintrc.json  tsconfig.spec.json
apps/vfs-desktop/: .eslintrc.json  UPDATER_SETUP.md  index.html  jest.config.ts  package-lock.json  package.json  project.json  tsconfig.json  vite.config.ts
apps/vfs-desktop/installer-scripts/: linux-install.sh  windows-install.ps1
apps/vfs-desktop/scripts/: extract-public-key.js  generate-update-manifest.js  version-bump.sh
apps/vfs-desktop/src/: App.tsx  main.tsx  setupTests.ts
apps/vfs-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/vfs-desktop/src-tauri/capabilities/: main.json
apps/vfs-desktop/src-tauri/dmg-resources/: Install Ursly VFS.command  README.txt
apps/vfs-desktop/src-tauri/src/: lib.rs  system.rs
apps/vfs-desktop/src-tauri/src/vfs/: commands.rs  mod.rs  mount.rs  multipart_upload.rs  operation_tracker.rs
apps/vfs-desktop/src-tauri/src/vfs/adapters/: clipboard.rs  mod.rs  native_thumbnail.rs  object_storage_tiering.rs  s3_storage.rs  s3_tiering.rs  transcription.rs
apps/vfs-desktop/src-tauri/src/vfs/application/: vfs_service.rs
apps/vfs-desktop/src-tauri/src/vfs/domain/: value_objects.rs
apps/vfs-desktop/src-tauri/src/vfs/platform/: network.rs  permissions.rs
apps/vfs-desktop/src-tauri/src/vfs/tests/: mod.rs
apps/vfs-desktop/src/components/: Header.css  Header.tsx
apps/vfs-desktop/src/contexts/: ThemeContext.tsx
apps/vfs-desktop/src/hooks/: useDeploymentMode.spec.ts  useDeploymentMode.ts  useDraggablePanel.spec.ts  useDraggablePanel.spec.tsx  useDraggablePanel.ts  useDraggableSection.spec.ts  useDraggableSection.spec.tsx  useDraggableSection.ts  useKeyboardShortcuts.spec.ts  useKeyboardShortcuts.ts
apps/vfs-desktop/src/pages/: BrowserFinderPage.tsx  FinderPage.spec.tsx  FinderPage.tsx  MetricsPage.css  MetricsPage.tsx  SettingsPage.css  SettingsPage.tsx  index.ts
apps/vfs-desktop/src/services/: browser-api.service.spec.ts  browser-api.service.ts  dialog.service.ts  storage.service.ts
apps/vfs-desktop/src/styles/: finder.css  index.css
apps/vfs-desktop/src/types/: storage.ts
apps/web/: .eslintrc.json  tsconfig.spec.json
apps/web-e2e/: playwright.config.ts  project.json  tsconfig.json
apps/web-e2e/src/: api-health.spec.ts  app.spec.ts  auth.spec.ts
apps/web/src/: App.tsx
keycloak/realms/: agent-orchestrator-realm.json
libs/agent-core/: .eslintrc.json
libs/audit-logger/: .eslintrc.json  jest.config.ts
libs/shared/types/: .eslintrc.json  jest.config.ts
nginx/: nginx-web.conf
scripts/: capture-perfect-screenshots.md  local-dev.sh  prepare-for-screenshots.js  setup-local.sh
website/: deploy.sh  index.html  site.webmanifest  styles.css
(+140 files in other folders)
