[package]
name = "ursly-agent"
version = "1.0.0"
description = "Ursly Agent - GPU Metrics & AI Agent Monitor"
authors = ["Ursly.io"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "ursly_agent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# System info for CPU/Memory metrics
sysinfo = "0.31"

# NVIDIA GPU metrics (optional, requires CUDA)
nvml-wrapper = { version = "0.10", optional = true }

# For GPU detection on all platforms
wgpu = "0.19"

# Async runtime
futures = "0.3"

# Lazy static initialization
once_cell = "1.19"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific GPU metrics via Metal
metal = "0.28"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific GPU metrics
windows = { version = "0.52", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
nvidia = ["nvml-wrapper"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true





