[package]
name = "ursly-desktop"
version = "1.0.0"
description = "Ursly.io Desktop App - GPU Metrics Monitor"
authors = ["Ursly.io"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "ursly_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# System info for CPU/Memory metrics
sysinfo = "0.31"

# NVIDIA GPU metrics (optional, requires CUDA)
nvml-wrapper = { version = "0.10", optional = true }

# For GPU detection on all platforms
wgpu = "0.19"

# Async runtime
futures = "0.3"

# Lazy static initialization
once_cell = "1.19"

# VFS & FUSE Implementation (fuser optional - requires macFUSE)
fuser = { version = "0.14", optional = true }
opendal = { version = "0.45", features = ["services-s3", "services-fs", "services-gcs"] }
anyhow = "1"
libc = "0.2"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# VFS Clean Architecture dependencies
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
md5 = "0.7"
dirs = "5.0"
tempfile = "3"  # For testing

# POSIX file operations support
filetime = "0.2"

# Clipboard URL encoding for Linux
urlencoding = "2.1"

# HLS streaming server
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific GPU metrics via Metal
metal = "0.28"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific GPU metrics and filesystem support
windows = { version = "0.52", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
nvidia = ["nvml-wrapper"]
vfs = ["fuser"]
media = ["axum", "tower", "tower-http"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

