[package]
name = "ursly-vfs"
version = "1.0.0"
description = "Ursly VFS - Virtual Cloud File System"
authors = ["Ursly.io"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "ursly_vfs_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# VFS & Storage
opendal = { version = "0.45", features = ["services-s3", "services-fs", "services-gcs"] }
anyhow = "1"
libc = "0.2"
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Sync primitives
parking_lot = "0.12"
once_cell = "1.19"

# System metrics
sysinfo = "0.31"

# GPU detection (cross-platform)
wgpu = "0.19"

# Async runtime
futures = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
data-encoding = "2"

# VFS Clean Architecture dependencies
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
md5 = "0.7"
dirs = "5.0"
tempfile = "3"

# POSIX file operations support
filetime = "0.2"

# Clipboard URL encoding for Linux
urlencoding = "2.1"

# HLS streaming server (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS GPU metrics via Metal
metal = "0.28"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi"
] }
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
media = ["axum", "tower", "tower-http"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true


